user profile title align fix

--- a/client/src/pages/UserProfile/UserProfilePage.css
+++ b/client/src/pages/UserProfile/UserProfilePage.css
@@ -66,6 +66,7 @@
   margin-top: 2.5rem;
   margin-bottom: 1rem;
   padding-bottom: 0.5rem;
+  text-align: center;
 }
 
 .past-rsvps-header,
@@ -131,6 +132,7 @@
 .dark-mode .rsvps-tab-view > h3,
 .dark-mode .created-events-tab-view > h3 {
   color: #fff;
+  text-align: center;
 }
 
 .dark-mode .past-rsvps-header,
